--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,9 @@
     <string name="IrAPerfilDeLaPersona">Ir a perfil de la persona</string>
     <string name="calificarPersona">Califica persona</string>
     <string name="eliminarViaje">Eliminar viaje</string>
+    <string name="ComoTeGustariaRegistrate">¿Como te gustaria registrarte?</string>
+    <string name="tipoCaja">Tipo de caja</string>
+    <string name="dobleRemolque">Doble remolque</string>
+    <string name="RControl">Recurso confiable</string>
+    <string name="experiencia">Califica al ofertante</string>
 </resources>
